<resources>
    <string name="app_name">Quizz App</string>
    <string name="Question1">What is the Capital of Chile ?</string>
    <string name="santiago">Santiago</string>
    <string name="cairo">Cairo</string>
    <string name="brelin">Berlin</string>
    <string name="Question2">Which country has won the World Cup ?</string>
    <string name="Egypt">Egypt</string>
    <string name="Spain">Spain</string>
    <string name="Germany">Germany</string>
    <string name="Question3">What is the Biggest Country in the World ?</string>
    <string name="Russia">Russia</string>
    <string name="China">China</string>
    <string name="India">India</string>
    <string name="Question4">Write short description about Tourism in Egypt !</string>
</resources>